Fixed chart size and position (#369)
There was too much whitespace at the bottom and not enough at the top.

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,13 @@ body {
     overflow-x: auto;
     font-family: sans-serif;
 }
+
+.full-screen-dialog > div:nth-child(2) > div:nth-child(1) {
+    display: flex;
+}
+
+.full-screen-dialog > div:nth-child(2) > div:nth-child(1) > div {
+    margin-top: 10px;
+    flex-grow: 1;
+    overflow: hidden;
+}
